@@ -19,11 +19,13 @@ import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class TicketService {
+
+    private static final String TICKET_NOT_FOUND_MESSAGE = "Ticket not found";
+    private static final String UPLOAD_DIR = "./uploads";
 
     private final TicketRepository ticketRepository;
     private final HotelRepository hotelRepository;
@@ -33,80 +35,74 @@ public class TicketService {
     private final TicketHistoryRepository ticketHistoryRepository;
     private final PlanRepository planRepository;
 
-    private static final String UPLOAD_DIR = "./uploads";
-
     @Transactional
     public TicketResponse createTicket(CreateTicketRequest request, List<MultipartFile> images) {
-        try {
-            Hotel hotel = hotelRepository.findById(request.getHotelId())
-                    .orElseThrow(() -> new RuntimeException("Hotel not found with ID: " + request.getHotelId()));
+        Hotel hotel = hotelRepository.findById(request.getHotelId())
+                .orElseThrow(() -> new RuntimeException("Hotel not found with ID: " + request.getHotelId()));
 
-            Category category = categoryRepository.findById(request.getCategoryId())
-                    .orElseThrow(() -> new RuntimeException("Category not found with ID: " + request.getCategoryId()));
+        Category category = categoryRepository.findById(request.getCategoryId())
+                .orElseThrow(() -> new RuntimeException("Category not found with ID: " + request.getCategoryId()));
 
-            // Vérifier que l'hôtel a un plan
-            if (hotel.getPlan() == null) {
-                throw new RuntimeException(
-                        "Hotel does not have a subscription plan. Please assign a plan to the hotel.");
-            }
-
-            Ticket ticket = new Ticket();
-            ticket.setTicketNumber(generateTicketNumber());
-            ticket.setHotel(hotel);
-            ticket.setCategory(category);
-            ticket.setClientEmail(request.getClientEmail());
-            ticket.setClientPhone(request.getClientPhone());
-            ticket.setDescription(request.getDescription());
-            ticket.setStatus(TicketStatus.OPEN);
-            ticket.setIsUrgent(request.getIsUrgent() != null ? request.getIsUrgent() : false);
-
-            // Calculate SLA deadline based on hotel plan
-            int slaHours = hotel.getPlan().getSlaHours();
-            ticket.setSlaDeadline(LocalDateTime.now().plusHours(slaHours));
-
-            ticket = ticketRepository.save(ticket);
-
-            // Save images if provided
-            if (images != null && !images.isEmpty()) {
-                for (MultipartFile image : images) {
-                    saveTicketImage(ticket, image);
-                }
-            }
-
-            return convertToResponse(ticket);
-        } catch (RuntimeException e) {
-            throw e;
+        // Vérifier que l'hôtel a un plan
+        if (hotel.getPlan() == null) {
+            throw new RuntimeException(
+                    "Hotel does not have a subscription plan. Please assign a plan to the hotel.");
         }
+
+        Ticket ticket = new Ticket();
+        ticket.setTicketNumber(generateTicketNumber());
+        ticket.setHotel(hotel);
+        ticket.setCategory(category);
+        ticket.setClientEmail(request.getClientEmail());
+        ticket.setClientPhone(request.getClientPhone());
+        ticket.setDescription(request.getDescription());
+        ticket.setStatus(TicketStatus.OPEN);
+        ticket.setIsUrgent(Boolean.TRUE.equals(request.getIsUrgent()));
+
+        // Calculate SLA deadline based on hotel plan
+        int slaHours = hotel.getPlan().getSlaHours();
+        ticket.setSlaDeadline(LocalDateTime.now().plusHours(slaHours));
+
+        ticket = ticketRepository.save(ticket);
+
+        // Save images if provided
+        if (images != null && !images.isEmpty()) {
+            for (MultipartFile image : images) {
+                saveTicketImage(ticket, image);
+            }
+        }
+
+        return convertToResponse(ticket);
     }
 
     public TicketResponse getTicketByNumber(String ticketNumber) {
         Ticket ticket = ticketRepository.findByTicketNumber(ticketNumber)
-                .orElseThrow(() -> new RuntimeException("Ticket not found"));
+                .orElseThrow(() -> new RuntimeException(TICKET_NOT_FOUND_MESSAGE));
         return convertToResponse(ticket);
     }
 
     public TicketResponse getTicketById(UUID ticketId) {
         Ticket ticket = ticketRepository.findById(ticketId)
-                .orElseThrow(() -> new RuntimeException("Ticket not found"));
+                .orElseThrow(() -> new RuntimeException(TICKET_NOT_FOUND_MESSAGE));
         return convertToResponse(ticket);
     }
 
     public List<TicketResponse> getTicketsByHotel(UUID hotelId) {
         return ticketRepository.findByHotelId(hotelId).stream()
                 .map(this::convertToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<TicketResponse> getTicketsByTechnician(UUID technicianId) {
         return ticketRepository.findByAssignedTechnicianId(technicianId).stream()
                 .map(this::convertToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<TicketResponse> getTicketsByEmail(String email) {
         return ticketRepository.findByClientEmail(email).stream()
                 .map(this::convertToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -115,13 +111,13 @@ public class TicketService {
     public List<TicketResponse> getAllTickets() {
         return ticketRepository.findAll().stream()
                 .map(this::convertToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     public TicketResponse updateTicketStatus(UUID ticketId, UpdateTicketStatusRequest request, UUID userId) {
         Ticket ticket = ticketRepository.findById(ticketId)
-                .orElseThrow(() -> new RuntimeException("Ticket not found"));
+                .orElseThrow(() -> new RuntimeException(TICKET_NOT_FOUND_MESSAGE));
 
         TicketStatus oldStatus = ticket.getStatus();
         ticket.setStatus(request.getStatus());
@@ -148,7 +144,7 @@ public class TicketService {
     @Transactional
     public TicketResponse addImagesToTicket(UUID ticketId, List<MultipartFile> images) {
         Ticket ticket = ticketRepository.findById(ticketId)
-                .orElseThrow(() -> new RuntimeException("Ticket not found"));
+                .orElseThrow(() -> new RuntimeException(TICKET_NOT_FOUND_MESSAGE));
 
         if (images != null && !images.isEmpty()) {
             for (MultipartFile image : images) {
@@ -243,10 +239,10 @@ public class TicketService {
         List<TicketImageDTO> imageDTOs = ticketImages.stream()
                 .map(img -> TicketImageDTO.builder()
                         .id(img.getId())
-                        .storage_path(img.getStoragePath())
-                        .file_name(img.getFileName())
+                        .storagePath(img.getStoragePath())
+                        .fileName(img.getFileName())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
         response.setImages(imageDTOs);
 
         return response;
